chore: fix sonar/linter warnings from VS Code (Repository, Bucket4j, Locale, MockBean, Domain ID, Lombok)